syntax = "proto3";

option go_package = "./;pb";

message SigninRequest {
    string email = 1;
    string password = 2;
    string credential = 3;
    string key = 4;
}

message SigninReply {
    string error = 1;
    int32 statusCode = 2;
    string token = 3;
}

message VerifyTokenRequest {
    string token = 1;
    string projectId = 2;
}

message Payload {
    string id = 1;
    string email = 2;
    int64 issueAt = 3;
    int64 expiredAt = 4; 
}

message VerifyTokenReply {
    string error = 1;
    int32 statusCode = 2;
    Payload Payload = 3;
}

message RefreshTokenRequest {
    string token = 1;
}

message RefreshTokenReply {
    string error = 1;
    int32 statusCode = 2;
    string token = 3;
}

service Authenticator {
    rpc SignIn (SigninRequest) returns (SigninReply) {};

    rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenReply) {};

    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenReply) {};
}